# blackhole

./: .gitignore  CMakeLists.txt  README.md  build.gradle.kts  extract_header.sh  get_jextract.sh  gradle.properties  settings.gradle.kts
include/: blackhole.h
java-binding/src/main/java/com/soda4fries/blackhole/: Blackhole_h.java
native/: CMakeLists.txt
native/src/: ip_blocker.cpp  main.cpp  tc_egress.c
src/: common.h  ip_blocker.cpp  tc_egress.c  xdp_ingress.c
src/main/java/com/soda4fries/blackhole/: Blackhole.java  Blackhole_h$shared.java
